--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,15 @@
 \documentclass[12pt]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage[nottoc]{tocbibind}
+\usepackage{amsmath}
+\usepackage{amsthm}
+\usepackage{comment}
 \graphicspath{ {images/} }
 
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{corollary}{Corollary}[theorem]
+\newtheorem{lemma}[theorem]{Lemma}
 \title{
 	{Crowdsourcing Moral AI in Self-Driving Cars}\\
 	{\large Duke University}\\
@@ -24,14 +31,14 @@ The thesis concerns the problem of moral decision making in self-driving cars. I
 To mum and dad
 
 \chapter*{Acknowledgements}
-I want to thank...
+I want to thank Professors Vincent Conitzer, Walter Sinnott-Armstrong, Jana Schaich Borg, and the rest of the Moral AI group for their continued help in writing this thesis.
 
 \tableofcontents
 
 \chapter{Introduction}
 \input{chapters/introduction}
 
-\chapter{Chapter Two Title}
+\chapter{Review of Prior Research}
 \input{chapters/chapter02}
 
 \chapter{Chapter Three Title}
@@ -46,6 +53,10 @@ I want to thank...
 \appendix
 \chapter{Appendix Title}
 \input{chapters/appendix}
+
+
+\bibliographystyle{unsrt}
+\bibliography{bibliography}
 
 
 \end{document}
