start review on ai morality

--- a/main.tex
+++ b/main.tex
@@ -38,8 +38,8 @@ I want to thank Professors Vincent Conitzer, Walter Sinnott-Armstrong, Jana Scha
 \chapter{Introduction}
 \input{chapters/introduction}
 
-\chapter{Review of Prior Research}
-\input{chapters/chapter02}
+\chapter{Review of Related Research}
+\input{chapters/relatedResearch}
 
 \chapter{Chapter Three Title}
 \input{chapters/chapter03}
