add bounds for statistical model

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 
 \newcommand{\budget}{\mathcal{B}}
 \newcommand{\decision}{D}
-\newcommand{\correct}{M}
+\newcommand{\correct}{Y}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{corollary}{Corollary}[theorem]
@@ -35,10 +35,14 @@
 
 
 \chapter*{Abstract}
-The thesis concerns the problem of moral decision making in self-driving cars. I examine some of the key philosophical issues involved in programming cars to make moral decisions and propose a proxy voting scheme as a solution. I begin by surveying related work in the topics of social choice, algorithmic morality and self-driving cars. I continue by exploring the problems inherent in this approach and explore random sampling as a possible solution. Finally, I conclude by suggesting further research avenues in this area.
+The thesis concerns the problem of moral decision making in self-driving cars. I examine some of the key philosophical issues involved in programming cars to make moral decisions and propose a proxy voting scheme as a solution. I begin by surveying related work in the topics of social choice, algorithmic morality and self-driving cars. I continue by exploring the problems inherent in this approach. I model the problem using a hierarchical model and give a limited bound on the probability of success via uniform random sampling. Finally, I conclude by suggesting further research avenues in this area.
+
+\begin{comment}
 
 \chapter*{Dedication}
 To mum and dad
+
+\end{comment}
 
 \chapter*{Acknowledgements}
 I want to thank Professors Vincent Conitzer, Walter Sinnott-Armstrong, Jana Schaich Borg, and the rest of the Moral AI group for their continued help in writing this thesis.
@@ -57,12 +61,16 @@ I want to thank Professors Vincent Conitzer, Walter Sinnott-Armstrong, Jana Scha
 \chapter{Future Research}
 \input{chapters/futureResearch}
 
+\begin{comment}
 \chapter{Conclusion}
 \input{chapters/conclusion}
+
 
 \appendix
 \chapter{Appendix Title}
 \input{chapters/appendix}
+
+\end{comment}
 
 
 
